Completed the login functionality

--- a/Reactor.Web/Reactor.Web.csproj
+++ b/Reactor.Web/Reactor.Web.csproj
@@ -1,15 +1,18 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
-
-    <PropertyGroup>
-        <TargetFramework>netcoreapp2.0</TargetFramework>
-    </PropertyGroup>
-
-    <ItemGroup>
-        <Folder Include="wwwroot\"/>
-    </ItemGroup>
-
-    <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.3"/>
-    </ItemGroup>
-
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+  <PropertyGroup>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
+  </PropertyGroup>
+  <ItemGroup>
+    <Folder Include="Gulp\Tasks" />
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.3" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Reactor.Data\Reactor.Data.csproj">
+      <Project>{E9A2DA9C-8437-475B-881A-96918010C5F2}</Project>
+      <Name>Reactor.Data</Name>
+    </ProjectReference>
+  </ItemGroup>
 </Project>
