--- a/Reactor.Web/package.json
+++ b/Reactor.Web/package.json
@@ -15,6 +15,9 @@
     "popper.js": "^1.14.3"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-sass": "^4.0.1",
