--- a/Reactor.Web/package.json
+++ b/Reactor.Web/package.json
@@ -12,7 +12,8 @@
     "bootstrap": "^4.1.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
-    "popper.js": "^1.14.3"
+    "popper.js": "^1.14.3",
+    "timeago.js": "^3.0.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
