--- a/Reactor.Web/package.json
+++ b/Reactor.Web/package.json
@@ -9,6 +9,7 @@
   "author": "Francis Ofosu Afriyie",
   "license": "ISC",
   "dependencies": {
+    "@types/jquery": "^3.3.1",
     "bootstrap": "^4.1.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
@@ -23,6 +24,9 @@
     "gulp-autoprefixer": "^5.0.0",
     "gulp-sass": "^4.0.1",
     "gulp-watch": "^5.0.0",
-    "webpack": "^4.5.0"
+    "ts-loader": "^4.3.0",
+    "typescript": "^2.8.3",
+    "webpack": "^4.5.0",
+    "webpack-cli": "^2.1.3"
   }
 }
