--- a/Reactor.Services/Reactor.Services.csproj
+++ b/Reactor.Services/Reactor.Services.csproj
@@ -8,4 +8,8 @@
       <Name>Reactor.Core</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.0.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.0.4" />
+  </ItemGroup>
 </Project>
