Added a messaging system.

--- a/Reactor.Web/package.json
+++ b/Reactor.Web/package.json
@@ -16,6 +16,7 @@
     "timeago.js": "^3.0.2"
   },
   "devDependencies": {
+    "@aspnet/signalr": "^1.0.0-rc1-update1",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
