--- a/Reactor.Web/Reactor.Web.csproj
+++ b/Reactor.Web/Reactor.Web.csproj
@@ -4,7 +4,6 @@
     <TypeScriptToolsVersion>2.3</TypeScriptToolsVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Folder Include="Pages\Profile" />
     <Folder Include="wwwroot\" />
     <Folder Include="wwwroot\assets\scripts" />
   </ItemGroup>
@@ -12,6 +11,7 @@
     <PackageReference Include="AutoMapper" Version="6.2.2" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="3.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.7" />
+    <!--<PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.0.0-alpha2-final" />-->
     <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.0.0-preview2-final" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="1.0.0-preview2-final" />
   </ItemGroup>
@@ -27,5 +27,6 @@
   </ItemGroup>
   <ItemGroup>
     <_ContentIncludedByDefault Remove="wwwroot\assets\styles\components\post.css" />
+    <_ContentIncludedByDefault Remove="wwwroot\assets\styles\pages\chat.css" />
   </ItemGroup>
 </Project>
