--- a/Reactor.Core/Reactor.Core.csproj
+++ b/Reactor.Core/Reactor.Core.csproj
@@ -5,4 +5,9 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.0.2" />
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="Microsoft.AspNetCore.SignalR.Core">
+      <HintPath>..\..\..\.nuget\packages\microsoft.aspnetcore.signalr.core\1.0.0-preview2-final\lib\netstandard2.0\Microsoft.AspNetCore.SignalR.Core.dll</HintPath>
+    </Reference>
+  </ItemGroup>
 </Project>
