--- a/Reactor.Services/Reactor.Services.csproj
+++ b/Reactor.Services/Reactor.Services.csproj
@@ -12,4 +12,9 @@
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.0.4" />
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="Microsoft.AspNetCore.SignalR.Core">
+      <HintPath>..\..\..\.nuget\packages\microsoft.aspnetcore.signalr.core\1.0.0-preview2-final\lib\netstandard2.0\Microsoft.AspNetCore.SignalR.Core.dll</HintPath>
+    </Reference>
+  </ItemGroup>
 </Project>
