--- a/Reactor.Web/Reactor.Web.csproj
+++ b/Reactor.Web/Reactor.Web.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-    <TypeScriptToolsVersion>2.3</TypeScriptToolsVersion>
+      <TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>
   </PropertyGroup>
   <ItemGroup>
     <Folder Include="wwwroot\" />
@@ -11,7 +11,6 @@
     <PackageReference Include="AutoMapper" Version="6.2.2" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="3.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.7" />
-    <!--<PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.0.0-alpha2-final" />-->
     <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.0.0-preview2-final" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="1.0.0-preview2-final" />
   </ItemGroup>
@@ -26,7 +25,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <_ContentIncludedByDefault Remove="wwwroot\assets\styles\components\post.css" />
     <_ContentIncludedByDefault Remove="wwwroot\assets\styles\pages\chat.css" />
   </ItemGroup>
+<ItemGroup>
+    <Content Include="**\*.ts" Exclude="$(GlobalExclude)" />
+</ItemGroup>
 </Project>
