--- a/Reactor.Web/package.json
+++ b/Reactor.Web/package.json
@@ -9,9 +9,11 @@
   "author": "Francis Ofosu Afriyie",
   "license": "ISC",
   "dependencies": {
+    "@types/jquery": "^3.3.2",
     "bootstrap": "^4.1.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
+    "open-iconic": "^1.1.1",
     "popper.js": "^1.14.3",
     "timeago.js": "^3.0.2"
   },
