--- a/Reactor.Web/Reactor.Web.csproj
+++ b/Reactor.Web/Reactor.Web.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-      <TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>
+    <TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>
   </PropertyGroup>
   <ItemGroup>
     <Folder Include="wwwroot\" />
@@ -27,7 +27,17 @@
   <ItemGroup>
     <_ContentIncludedByDefault Remove="wwwroot\assets\styles\pages\chat.css" />
   </ItemGroup>
-<ItemGroup>
+  <ItemGroup>
     <Content Include="**\*.ts" Exclude="$(GlobalExclude)" />
-</ItemGroup>
+    <Content Remove="node_modules\**" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="node_modules\**" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Remove="node_modules\**" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="node_modules\**" />
+  </ItemGroup>
 </Project>
