--- a/Reactor.Web/package.json
+++ b/Reactor.Web/package.json
@@ -13,6 +13,8 @@
     "bootstrap": "^4.1.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
+    "jquery-validation": "^1.17.0",
+    "jquery-validation-unobtrusive": "^3.2.10",
     "open-iconic": "^1.1.1",
     "popper.js": "^1.14.3",
     "timeago.js": "^3.0.2"
