--- a/Reactor.Web/package.json
+++ b/Reactor.Web/package.json
@@ -10,9 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "@types/jquery": "^3.3.2",
+    "@types/jquery.slimscroll": "^1.3.31",
     "bootstrap": "^4.1.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
+    "jquery-slimscroll": "^1.3.8",
     "jquery-validation": "^1.17.0",
     "jquery-validation-unobtrusive": "^3.2.10",
     "open-iconic": "^1.1.1",
