--- a/Reactor.Web/package.json
+++ b/Reactor.Web/package.json
@@ -12,12 +12,13 @@
     "@types/jquery": "^3.3.2",
     "@types/jquery.slimscroll": "^1.3.31",
     "bootstrap": "^4.1.0",
+    "emojionearea": "^3.4.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "jquery-slimscroll": "^1.3.8",
+    "jquery-textcomplete": "^1.8.4",
     "jquery-validation": "^1.17.0",
     "jquery-validation-unobtrusive": "^3.2.10",
-    "open-iconic": "^1.1.1",
     "popper.js": "^1.14.3",
     "timeago.js": "^3.0.2"
   },
@@ -32,6 +33,8 @@
     "gulp-autoprefixer": "^5.0.0",
     "gulp-sass": "^4.0.1",
     "gulp-watch": "^5.0.0",
+    "ts-loader": "^4.3.0",
+    "typescript": "^2.9.1",
     "webpack": "^4.5.0"
   }
 }
